--- a/views/destroy.erb
+++ b/views/destroy.erb
@@ -1,6 +1,4 @@
 <form action="/destroy" method="post">
-  <input type="hidden" name="id" value="<%= @task.id %>">
-  <input type="text" name="name" value="<%= @task.name %>">
-  <input type="text" name="quantity" value="<%= @task.quantity %>">
+  <input type="hidden" name="id" value="<%= @item.id %>">
   <input type="submit">Update Item</input>
 </form>
