--- a/views/read.erb
+++ b/views/read.erb
@@ -1,1 +1,50 @@
-action completed
+<h3>Item List</h3>
+
+<% if @message %>
+  <strong><%= @message %></strong>
+<% end %>
+
+<li><a href='/create'>Create Item</a></li>
+
+<table>
+  <thead>
+    <th>
+      Id
+    </th>
+    <th>
+      Name
+    </th>
+    <th>
+      Description
+    </th>
+    <th>
+      Update?
+    </th>
+    <th>
+      Destroy?
+    </th>
+  </thead>
+
+  <tbody>
+    <% @item.each do |item| %>
+      <tr>
+        <td>
+          <%= item.id %>
+        </td>
+        <td>
+          <%= item.name %>
+        </td>
+        <td>
+          <%= item.quantity %>
+        </td>
+
+        <td>
+          <a href='/update/<%= item.id %>'>Update</a>
+        </td>
+        <td>
+          <a href='/destroy/<%= item.id %>'>Destroy</a>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
