--- a/views/update.erb
+++ b/views/update.erb
@@ -1,6 +1,10 @@
+<p>
+  <em>Update item #<%= @item.id %>.</em>
+</p>
+
 <form action="/update" method="post">
-  <input type="hidden" name="id" value="<%= @task.id %>">
-  <input type="text" name="name" value="<%= @task.name %>">
-  <input type="text" name="quantity" value="<%= @task.quantity %>">
+  <input type="hidden" name="id" value="<%= @item.id %>">
+  <input type="text" name="name" value="<%= @item.name %>">
+  <input type="text" name="quantity" value="<%= @item.quantity %>">
   <input type="submit">Update Item</input>
 </form>
