login page added

--- a/views/create.erb
+++ b/views/create.erb
@@ -4,4 +4,5 @@ Create Item
   <input type="text" name="name" value="input item name">
   <input type="text" name="quantity" value="input quantity">
   <input type="submit"></input>
+  <a href="/">home</a>
 </form>
