--- a/views/destroy.erb
+++ b/views/destroy.erb
@@ -1,4 +1,5 @@
 <form action="/destroy" method="post">
   <input type="hidden" name="id" value="<%= @item.id %>">
   <input type="submit">Update Item</input>
+  <a href="/">home</a>
 </form>
