--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="public/style.css" media="screen" title="no title" charset="utf-8">
+    <script src ="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!-- <script src='scripts/app.js'></script> -->
   </head>
   <body>
+    layout text
     <%= yield %>
   </body>
 </html>
