--- a/views/update.erb
+++ b/views/update.erb
@@ -3,6 +3,7 @@
 </p>
 
 <form action="/update" method="post">
+  <a href="/">return home</a>
   <input type="hidden" name="id" value="<%= @item.id %>">
   <input type="text" name="name" value="<%= @item.name %>">
   <input type="text" name="quantity" value="<%= @item.quantity %>">
